--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "@nuxtjs/pwa": "^3.0.0-0",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
-    "markdown-it": "^10.0.0",
     "nuxt": "^2.0.0",
     "nuxt-buefy": "^0.3.2",
-    "v-runtime-template": "^1.10.0"
+    "quill": "^1.3.7",
+    "vue-quill-editor": "^3.0.6"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^2.0.0",
