--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nuxtjs/pwa": "^3.0.0-0",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
+    "highlight.js": "^9.18.1",
+    "highlightjs": "^9.16.2",
     "nuxt": "^2.0.0",
     "nuxt-buefy": "^0.3.2",
     "quill": "^1.3.7",
