--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     }
   },
   "dependencies": {
+    "@nuxtjs/auth": "^4.9.0",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.0",
+    "@nuxtjs/firebase": "^5.0.2",
     "@nuxtjs/pwa": "^3.0.0-0",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
+    "firebase": "^7.11.0",
     "highlight.js": "^9.18.1",
     "highlightjs": "^9.16.2",
     "nuxt": "^2.0.0",
