--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "author": "Krystian Fras",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
+    "dev": "nuxt",
     "build": "nuxt build",
-    "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "test": "jest"
+    "test": "jest",
+    "start": "cross-env NODE_ENV=production node server/index.js"
   },
   "lint-staged": {
     "*.{js,vue}": "npm run lint",
@@ -30,8 +30,11 @@
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "firebase": "^7.11.0",
+    "github-markdown-css": "^4.0.0",
     "highlight.js": "^9.18.1",
     "highlightjs": "^9.16.2",
+    "markdown-it": "^10.0.0",
+    "markdown-it-prism": "^2.0.5",
     "nuxt": "^2.0.0",
     "nuxt-buefy": "^0.3.2",
     "quill": "^1.3.7",
@@ -48,6 +51,7 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-plugin-prettier": "^3.1.2",
+    "frontmatter-markdown-loader": "^3.2.1",
     "husky": "^4.0.0",
     "jest": "^24.1.0",
     "lint-staged": "^10.0.0",
