--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "author": "Krystian Fras",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "cross-env NODE_ENV=development nodemon -r esm --inspect server/index.js --watch server",
     "build": "nuxt build",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "test": "jest",
-    "start": "cross-env NODE_ENV=production node server/index.js"
+    "start": "cross-env NODE_ENV=production node -r esm server/index.js"
   },
   "lint-staged": {
     "*.{js,vue}": "npm run lint",
@@ -22,23 +22,14 @@
     }
   },
   "dependencies": {
-    "@nuxtjs/auth": "^4.9.0",
-    "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.0",
-    "@nuxtjs/firebase": "^5.0.2",
     "@nuxtjs/pwa": "^3.0.0-0",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
-    "firebase": "^7.11.0",
     "github-markdown-css": "^4.0.0",
     "highlight.js": "^9.18.1",
-    "highlightjs": "^9.16.2",
-    "markdown-it": "^10.0.0",
-    "markdown-it-prism": "^2.0.5",
     "nuxt": "^2.0.0",
-    "nuxt-buefy": "^0.3.2",
-    "quill": "^1.3.7",
-    "vue-quill-editor": "^3.0.6"
+    "nuxt-buefy": "^0.3.2"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^2.0.0",
