--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "test": "jest",
-    "start": "cross-env NODE_ENV=production node -r esm server/index.js"
+    "start": "cross-env NODE_ENV=production node -r esm server/index.js",
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
+
   },
   "lint-staged": {
     "*.{js,vue}": "npm run lint",
@@ -19,7 +21,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged",
-      "pre-push": "npm run generate"
+      "pre-push": "npm run generate:gh-pages"
     }
   },
   "dependencies": {
@@ -50,6 +52,7 @@
     "node-sass": "^4.13.1",
     "nodemon": "^1.18.9",
     "prettier": "^1.19.1",
+    "push-dir": "^0.4.1",
     "sass-loader": "^8.0.2",
     "stylelint": "^10.1.0",
     "vue-jest": "^4.0.0-0"
