--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "my-tech-blog",
+  "name": "nuxt-blog-starter",
   "version": "1.0.0",
-  "description": "my-tech-blog application",
+  "description": "nuxt-blog-starter application",
   "author": "Krystian Fras",
   "private": true,
   "scripts": {
