SSR highlight.js

--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "test": "jest",
     "start": "cross-env NODE_ENV=production node -r esm server/index.js",
     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
-
   },
   "lint-staged": {
     "*.{js,vue}": "npm run lint",
@@ -31,6 +30,7 @@
     "express": "^4.16.4",
     "github-markdown-css": "^4.0.0",
     "highlight.js": "^9.18.1",
+    "markdown-it": "^10.0.0",
     "nuxt": "^2.0.0",
     "nuxt-buefy": "^0.3.2"
   },
