--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,10 +8,9 @@ public_folder: /img
 collections:
   - name: 'blog'
     label: 'Blog'
-    format: 'json'
     folder: 'articles'
     create: true
-    slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
+    slug: '{{slug}}'
     editor:
       preview: false
     fields:
